# libiop

./: .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md
depends/: CMakeLists.txt
libiop/: CMakeLists.txt
libiop/algebra/: exponentiation.hpp  exponentiation.tcc  fft.hpp  fft.tcc  field_utils.hpp  lagrange.tcc  utils.cpp  utils.hpp  utils.tcc
libiop/algebra/field_subset/: basis_utils.hpp  field_subset.hpp  field_subset.tcc  subgroup.hpp  subgroup.tcc  subspace.hpp  subspace.tcc
libiop/algebra/fields/: README.md  gf128.cpp  gf128.hpp  gf192.cpp  gf192.hpp  gf256.cpp  gf256.hpp  gf64.cpp  gf64.hpp  utils.hpp
libiop/algebra/polynomials/: lagrange_polynomial.tcc  linearized_polynomial.hpp  linearized_polynomial.tcc  piecewise_polynomial.hpp  polynomial.hpp  polynomial.tcc  vanishing_polynomial.hpp  vanishing_polynomial.tcc
libiop/algebra/trace_embedding/: additive_successor_ordering.tcc  bivariate_embedding.hpp  bivariate_embedding.tcc  successor_ordering.hpp
libiop/bcs/: README.md  bcs_common.hpp  bcs_common.tcc  bcs_indexer.hpp  bcs_indexer.tcc  bcs_prover.hpp  bcs_prover.tcc  bcs_verifier.hpp  bcs_verifier.tcc  common_bcs_parameters.hpp  common_bcs_parameters.tcc  merkle_tree.hpp  merkle_tree.tcc  pow.hpp  pow.tcc
libiop/bcs/hashing/: README.md  algebraic_sponge.hpp  algebraic_sponge.tcc  blake2b.cpp  blake2b.hpp  blake2b.tcc  dummy_algebraic_hash.hpp  dummy_algebraic_hash.tcc  dummy_algebraic_sponge.hpp  generate_MDS.sage  hash_enum.hpp  hash_enum.tcc  hashing.hpp  poseidon.hpp  poseidon.md  poseidon.tcc  rescue.hpp
libiop/benchmarks/: CMakeLists.txt  benchmark_alt_bn128.cpp  benchmark_edwards.cpp  benchmark_fft.cpp  benchmark_gf128.cpp  benchmark_gf192.cpp  benchmark_gf256.cpp  benchmark_gf64.cpp  benchmark_hashes.cpp  benchmark_lagrange.cpp  benchmark_polynomials.cpp  benchmark_sumcheck.cpp  benchmark_vector_op.cpp
libiop/common/: common.cpp  common.hpp  profiling.cpp
libiop/constraints/: Cargo.toml
libiop/constraints/src/: lib.rs
libiop/constraints/src/algebraic_crh/: constraints.rs  mod.rs
libiop/constraints/src/alt_bn128/: fr.rs  mod.rs
libiop/constraints/src/deserialize_transcript/: mod.rs  serialize.rs
libiop/constraints/src/prf/: constraints.rs  mod.rs
libiop/constraints/src/rs_iop/: mod.rs  rowcheck.rs
libiop/iop/: iop.hpp  iop.tcc  oracles.hpp
libiop/iop/utilities/: batching.cpp  batching.hpp  batching.tcc
libiop/profiling/: CMakeLists.txt  boost_profile.cpp  instrument_algebra.cpp  instrument_aurora_snark.cpp  instrument_fractal_snark.cpp  instrument_fri_snark.cpp  instrument_ligero_snark.cpp  snark_types.hpp
libiop/protocols/: aurora_iop.hpp  aurora_iop.tcc  fractal_hiop.hpp  fractal_hiop.tcc  fri_iop.hpp  fri_iop.tcc  ligero_iop.tcc
libiop/protocols/encoded/: dummy_protocol.hpp  dummy_protocol.tcc
libiop/protocols/encoded/aurora/: aurora.hpp  aurora.tcc  multi_lincheck.hpp  multi_lincheck.tcc  multi_lincheck_aux.hpp  multi_lincheck_aux.tcc  rowcheck.hpp  rowcheck.tcc  sumcheck.hpp  sumcheck.tcc
libiop/protocols/encoded/common/: boundary_constraint.tcc  random_linear_combination.hpp  random_linear_combination.tcc  rational_linear_combination.tcc  rowcheck.tcc
libiop/protocols/encoded/ligero/: interleaved_lincheck_et.tcc  interleaved_lincheck_ot.hpp  interleaved_lincheck_ot.tcc  interleaved_rowcheck.tcc  ligero.hpp  ligero.tcc
libiop/protocols/encoded/lincheck/: basic_lincheck.tcc  basic_lincheck_aux.hpp  basic_lincheck_aux.tcc  common.tcc  holographic_lincheck.hpp  holographic_lincheck.tcc  holographic_lincheck_aux.tcc
libiop/protocols/encoded/r1cs_rs_iop/: fractal_indexer.tcc  r1cs_rs_iop.tcc
libiop/protocols/encoded/sumcheck/: rational_sumcheck.tcc  sumcheck.tcc  sumcheck_aux.tcc
libiop/protocols/ldt/: ldt_reducer.cpp  ldt_reducer.hpp  ldt_reducer.tcc  ldt_reducer_aux.hpp  ldt_reducer_aux.tcc  multi_ldt_base.hpp
libiop/protocols/ldt/direct_ldt/: direct_ldt.tcc
libiop/protocols/ldt/fri/: argument_size_optimizer.hpp  argument_size_optimizer.tcc  bivariate_embedding.tcc  circuit_size_optimizer.hpp  circuit_size_optimizer.tcc  fri_aux.cpp  (+9 more)
libiop/relations/: r1cs.hpp  r1cs.tcc  sparse_matrix.cpp  sparse_matrix.hpp  sparse_matrix.tcc  succinct_matrix.hpp  variable.tcc
libiop/snark/: aurora_snark.hpp  aurora_snark.tcc  fractal_snark.hpp  fractal_snark.tcc  fri_snark.hpp  fri_snark.tcc  ligero_snark.hpp  ligero_snark.tcc
libiop/snark/common/: bcs16_common.hpp  bcs16_common.tcc  bcs16_prover.hpp  bcs16_prover.tcc  bcs16_verifier.hpp  bcs16_verifier.tcc  hashing.hpp  hashing.tcc  merkle_tree.hpp  merkle_tree.tcc
libiop/tests/: CMakeLists.txt
libiop/tests/algebra/: test_algebra_utils.cpp  test_bivariate_embedding.cpp  test_exponentiation.cpp  test_fft.cpp  test_lagrange.cpp  test_lagrange_polynomial.cpp  test_linearized_polynomial.cpp  test_merkle_tree.cpp  test_successor_ordering.cpp  test_vanishing_polynomial.cpp
libiop/tests/bcs/: dummy_bcs_protocol.hpp  test_bcs_transformation.cpp  test_merkle_tree.cpp
libiop/tests/iop/: test_iop.cpp  test_iop_query_position.cpp
libiop/tests/protocols/: test_aurora_multi_lincheck.cpp  test_aurora_protocol.cpp  test_aurora_protocol_components.cpp  test_aurora_rowcheck.cpp  test_aurora_sumcheck.cpp  test_basic_lincheck.cpp  test_boundary_constraint.cpp  test_direct_ldt.cpp  test_fractal_indexer.cpp  test_fractal_protocol.cpp  test_fri.cpp  test_fri_aux.cpp  test_fri_optimizer.cpp  test_holographic_lincheck.cpp  test_ldt_reducer.cpp  test_ligero_interleaved_lincheck_et.cpp  test_ligero_interleaved_lincheck_ot.cpp  test_ligero_interleaved_rowcheck.cpp  test_ligero_protocol.cpp  test_r1cs_to_lincheck_reduction.cpp  test_rational_linear_combination.cpp  test_rational_sumcheck.cpp  test_rowcheck.cpp  test_sumcheck.cpp  utilities.cpp
libiop/tests/relations/: test_identity_matrices.cpp  test_r1cs.cpp
libiop/tests/snark/: dummy_bcs_protocol.hpp  dummy_bcs_protocol.tcc  test_aurora_snark.cpp  test_bcs_transformation.cpp  test_fractal_snark.cpp  test_ligero_snark.cpp  test_linking.cpp  test_poseidon.cpp  test_pow.cpp  test_serialization.cpp
(+4 files in other folders)
