# INSTRUMENTATION

add_executable(instrument_algebra instrument_algebra.cpp)
add_executable(instrument_aurora_snark instrument_aurora_snark.cpp)
add_executable(instrument_fractal_snark instrument_fractal_snark.cpp)
add_executable(instrument_fri_snark instrument_fri_snark.cpp)
add_executable(instrument_ligero_snark instrument_ligero_snark.cpp)
if("${CPPDEBUG}")
  target_link_libraries(instrument_aurora_snark iop gtest_main)
  target_link_libraries(instrument_fractal_snark iop gtest_main)
  target_link_libraries(instrument_fri_snark iop)
  target_link_libraries(instrument_ligero_snark iop)
else()
  target_link_libraries(instrument_aurora_snark iop ${Boost_LIBRARIES} gtest_main)
  target_link_libraries(instrument_fractal_snark iop ${Boost_LIBRARIES} gtest_main)
  target_link_libraries(instrument_fri_snark iop ${Boost_LIBRARIES})
  target_link_libraries(instrument_ligero_snark iop ${Boost_LIBRARIES})
endif()
target_link_libraries(instrument_algebra iop ${Boost_LIBRARIES})
